Translate using/windows.po (#302) Fix build

--- a/using/windows.po
+++ b/using/windows.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-01-01 17:01-0300\n"
+"PO-Revision-Date: 2021-01-02 14:12-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -136,7 +136,7 @@ msgid ""
 "connection for optional features. See :ref:`install-layout-option` for other "
 "ways to avoid downloading during installation."
 msgstr ""
-"Cuatro instaladores de Python |versión| están disponibles para descargar - "
+"Cuatro instaladores de Python |version| están disponibles para descargar - "
 "dos por cada una de las versiones de 32-bit y 64-bit del intérprete. El "
 "*instalador web* es una pequeña descarga inicial que automáticamente "
 "descargará los componentes requeridos cuando sea necesario. El *instalador "
@@ -354,7 +354,7 @@ msgstr "InstallAllUsers"
 
 #: ../Doc/using/windows.rst:144
 msgid "Perform a system-wide installation."
-msgstr "Realice una instalación en todo el sistema."
+msgstr "Realizar una instalación en todo el sistema."
 
 #: ../Doc/using/windows.rst:144 ../Doc/using/windows.rst:167
 #: ../Doc/using/windows.rst:170 ../Doc/using/windows.rst:179
@@ -1424,7 +1424,7 @@ msgstr ""
 "Se puede utilizar el modo UTF-8 para cambiar la codificación predeterminada "
 "a UTF-8. El modo UTF-8 se puede activar mediante la opción de línea de "
 "comandos ``-X utf-8``, o con la variable de entorno ``PYTHONUTF8=1``. "
-"Consulte :envvar:`PYTHONUTF8 para activar el modo UTF-8, y :ref:`setting-"
+"Consulte :envvar:`PYTHONUTF8` para activar el modo UTF-8, y :ref:`setting-"
 "envvars` para saber cómo modificar las variables de entorno."
 
 #: ../Doc/using/windows.rst:625
@@ -1560,8 +1560,8 @@ msgid ""
 "you will have noticed that Python |version| was started - to launch Python "
 "2.7, try the command:"
 msgstr ""
-"Si hay múltiples versiones de Python instaladas (por ej. 2.7 y |versión|) "
-"habrá notado que se inició Python |versión| - para iniciar Python 2.7, "
+"Si hay múltiples versiones de Python instaladas (por ej. 2.7 y |version|) "
+"habrá notado que se inició Python |version| - para iniciar Python 2.7, "
 "ejecute el comando:"
 
 #: ../Doc/using/windows.rst:697
@@ -2162,7 +2162,7 @@ msgstr ""
 "ruta del ejecutable principal de Python es utilizada para ubicar un "
 "\"archivo de referencia\" (ya sea ``Lib\\os.py`` o ``pythonXY.zip``) para "
 "deducir el \"Python Home\". Si el directorio de origen de Python es "
-"encontrado, los subdirectorios relevantes que se agregan a :data: `sys.path` "
+"encontrado, los subdirectorios relevantes que se agregan a :data:`sys.path` "
 "(``Lib``, ``plat-win``, etc.) se basan en ese directorio. Por el contrario, "
 "la ruta principal de Python se construye a partir del PythonPath guardado en "
 "el registro."
