Translate using/windows.po (#302) Corrections

--- a/using/windows.po
+++ b/using/windows.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-01-02 14:12-0300\n"
+"PO-Revision-Date: 2021-01-02 16:24-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -264,7 +264,7 @@ msgid ""
 "``HKEY_LOCAL_MACHINE\\SYSTEM\\CurrentControlSet\\Control"
 "\\FileSystem@LongPathsEnabled`` to ``1``."
 msgstr ""
-"En las últimas versiones de Windows, esta límite puede ser extendido a "
+"En las últimas versiones de Windows, este límite puede ser extendido a "
 "aproximadamente 32,000 caracteres. El administrador tendrá que activar la "
 "directiva de grupo \"Enable Win32 long paths\", o establecer el valor del "
 "registro ``HKEY_LOCAL_MACHINE\\SYSTEM\\CurrentControlSet\\Control"
@@ -677,8 +677,8 @@ msgid ""
 msgstr ""
 "Ejecute el siguiente comando desde el símbolo del sistema para descargar "
 "todos los posibles archivos requeridos. Recuerde reemplazar ``Python-3.8.0."
-"exe`` por el nombre real instalador y crear una estructura de directorios "
-"propia para evitar colisiones entre archivos del mismo nombre."
+"exe`` por el nombre real del instalador y crear una estructura de "
+"directorios propia para evitar colisiones entre archivos del mismo nombre."
 
 #: ../Doc/using/windows.rst:268
 msgid ""
@@ -774,7 +774,7 @@ msgid ""
 msgstr ""
 "Luego de la instalación, Python puede iniciarse a través del menú de Inicio. "
 "Como alternativa, también estará disponible desde cualquier símbolo del "
-"sistema o sesión de PowerShell al escribir ``Python``. Además, pip e IDLE "
+"sistema o sesión de PowerShell al escribir ``python``. Además, pip e IDLE "
 "pueden ser usados escribiendo ``pip`` o ``idle``. IDLE también puede ser "
 "encontrado en el Inicio."
 
@@ -812,9 +812,9 @@ msgid ""
 "one from the Microsoft Store. To access the new installation, use ``python3."
 "exe`` or ``python3.x.exe``."
 msgstr ""
-"Si has instalado otra versión de Python que se haya agregado a la "
+"Si ha instalado otra versión de Python que se haya agregado a la "
 "variable``PATH``, estará disponible como ``python.exe`` en lugar de la de "
-"Microsoft Store. Para acceder a la nueva instalación, usa ``python3.exe`` o "
+"Microsoft Store. Para acceder a la nueva instalación, use ``python3.exe`` o "
 "``python3.x.exe``."
 
 #: ../Doc/using/windows.rst:328
@@ -832,9 +832,9 @@ msgid ""
 "remove all packages you installed directly into this Python installation, "
 "but will not remove any virtual environments"
 msgstr ""
-"Para eliminar Python, abre Configuración y utiliza Aplicaciones y "
-"características, o encuentra Python en el Inicio y mediante click derecho "
-"selecciona Desinstalar. La desinstalación eliminará todos los paquetes "
+"Para eliminar Python, abra Configuración y utilice Aplicaciones y "
+"características, o encuentre Python en el Inicio y mediante click derecho "
+"seleccione Desinstalar. La desinstalación eliminará todos los paquetes "
 "instalados directamente en esta instalación de Python, pero no eliminará "
 "ningún entorno virtual"
 
@@ -851,9 +851,9 @@ msgid ""
 msgstr ""
 "Debido a restricciones en las aplicaciones de Microsoft Store, los scripts "
 "de Python podrían no tener acceso completo de escritura en ubicaciones "
-"compartidas como ``TEMP`` o el registro. En su lugar, escribirá en una copia "
-"privada. Si tus scripts deben modificar las ubicaciones compartidas, "
-"necesitarás instalar el instalador completo."
+"compartidas como ``TEMP`` o el registro. En su lugar, se escribirá en una "
+"copia privada. Si sus scripts deben modificar las ubicaciones compartidas, "
+"necesitará instalar el instalador completo."
 
 #: ../Doc/using/windows.rst:348
 msgid "The nuget.org packages"
@@ -878,7 +878,7 @@ msgid ""
 "information on using nuget. What follows is a summary that is sufficient for "
 "Python developers."
 msgstr ""
-"Visita `nuget.org <https://www.nuget.org/>`_ para obtener la información más "
+"Visite `nuget.org <https://www.nuget.org/>`_ para obtener la información más "
 "actualizada sobre cómo usar nuget. Lo que sigue es un resumen que es "
 "suficiente para desarrolladores Python."
 
@@ -903,7 +903,7 @@ msgid ""
 "the specific version installed. Inside the subdirectory is a ``tools`` "
 "directory that contains the Python installation::"
 msgstr ""
-"Para seleccionar una versión específica, agrega ``-Version 3.x.y``. El "
+"Para seleccionar una versión específica, agregue ``-Version 3.x.y``. El "
 "directorio de salida se puede cambiar desde ``.``, y el paquete se instalará "
 "en un subdirectorio. Por defecto, el subdirectorio es nombrado con el mismo "
 "nombre del paquete, y sin la opción ``-ExcludeVersion`` este nombre incluirá "
@@ -1209,8 +1209,8 @@ msgstr ""
 "considerar cambiar algunas variables de entorno predeterminadas de Windows. "
 "Si bien el instalador proporciona una opción para configurar las variables "
 "PATH y PATHEXT, esto solo es confiable para una única instalación en todo el "
-"sistema. Si usas varias versiones de Python con regularidad, considera usar "
-"el :ref:`launcher`."
+"sistema. Si utiliza varias versiones de Python con regularidad, considere "
+"usar el :ref:`launcher`."
 
 #: ../Doc/using/windows.rst:520
 msgid "Excursus: Setting environment variables"
@@ -1231,7 +1231,7 @@ msgid ""
 "command:`set` command:"
 msgstr ""
 "Para configurar una variable de entorno temporal, abra el símbolo del "
-"sistema y use el comando :command:`set`:"
+"sistema y utilice el comando :command:`set`:"
 
 #: ../Doc/using/windows.rst:534
 msgid ""
@@ -1401,7 +1401,7 @@ msgid ""
 "`locale.getpreferredencoding`)."
 msgstr ""
 "Windows aún utiliza codificación heredada para la codificación del sistema "
-"(la página de códigos ASNI). Python la utiliza para la codificación por "
+"(la página de códigos ANSI). Python la utiliza para la codificación por "
 "defecto de archivos de texto (por ej. :func:`locale.getpreferredencoding`)."
 
 #: ../Doc/using/windows.rst:616
@@ -1714,7 +1714,7 @@ msgid ""
 "Windows, this launcher supports a number of 'virtual' commands to specify "
 "which interpreter to use.  The supported virtual commands are:"
 msgstr ""
-"Para permitir que las líneas shebang de scripts de Python sean portables "
+"Para permitir que las líneas shebang de scripts de Python sean trasladables "
 "entre Unix y Windows, este lanzador soporta varios comandos 'virtuales' para "
 "especificar qué intérprete utilizar. Los comandos virtuales soportados son:"
 
@@ -2491,7 +2491,7 @@ msgid ""
 "Visual Studio 2015, which is the compiler used to build the official Python "
 "releases. These files are in the :file:`PCbuild` directory."
 msgstr ""
-"El árbol del código fuente contiene un solución de compilación y archivos "
+"El árbol del código fuente contiene una solución de compilación y archivos "
 "del proyecto para Microsoft Visual Studio 2015, el cual es el compilador "
 "utilizado para compilar las versiones oficiales de Python. Estos archivos se "
 "encuentran en el directorio :file:`PCbuild`."
