--- a/whatsnew/3.2.po
+++ b/whatsnew/3.2.po
@@ -6,31 +6,33 @@
 # Check https://github.com/python/python-docs-es/blob/3.8/TRANSLATORS to
 # get the list of volunteers
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2021-01-03 18:40-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Last-Translator: \n"
+"Language: es\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../Doc/whatsnew/3.2.rst:3
 msgid "What's New In Python 3.2"
-msgstr ""
+msgstr "Qué hay de nuevo en Python 3.2"
 
 #: ../Doc/whatsnew/3.2.rst
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: ../Doc/whatsnew/3.2.rst:5
 msgid "Raymond Hettinger"
-msgstr ""
+msgstr "Raymond Hettinger"
 
 #: ../Doc/whatsnew/3.2.rst:51
 msgid ""
@@ -39,14 +41,19 @@ msgid ""
 "the `Misc/NEWS <https://github.com/python/cpython/"
 "blob/076ca6c3c8df3030307e548d9be792ce3c1c6eea/Misc/NEWS>`_ file."
 msgstr ""
+"Este artículo explica las nuevas características de Python 3.2 en "
+"comparación con 3.1. Se centra en algunos aspectos destacados y ofrece "
+"algunos ejemplos. Para obtener detalles completos, consulte el archivo `Misc/"
+"NEWS <https://github.com/python/cpython/"
+"blob/076ca6c3c8df3030307e548d9be792ce3c1c6eea/Misc/NEWS>`_ file."
 
 #: ../Doc/whatsnew/3.2.rst:59
 msgid ":pep:`392` - Python 3.2 Release Schedule"
-msgstr ""
+msgstr ":pep:`392` - Calendario de Publicación Python 3.2"
 
 #: ../Doc/whatsnew/3.2.rst:63
 msgid "PEP 384: Defining a Stable ABI"
-msgstr ""
+msgstr "PEP 384: Definición de un ABI estable"
 
 #: ../Doc/whatsnew/3.2.rst:65
 msgid ""
@@ -56,6 +63,12 @@ msgid ""
 "to use. This requirement was the result of the free access to Python "
 "interpreter internals that extension modules could use."
 msgstr ""
+"En el pasado, los módulos de extensión creados para una versión de Python a "
+"menudo no se podían usar con otras versiones de Python. Particularmente en "
+"Windows, cada lanzamiento de funciones de Python requería reconstruir todos "
+"los módulos de extensión que uno quería usar. Este requisito fue el "
+"resultado del acceso gratuito a los componentes internos del intérprete de "
+"Python que los módulos de extensión podían usar."
 
 #: ../Doc/whatsnew/3.2.rst:71
 msgid ""
@@ -68,18 +81,28 @@ msgid ""
 "memory structures can still be built, but will need to be recompiled for "
 "every feature release."
 msgstr ""
+"Con Python 3.2, está disponible un enfoque alternativo: los módulos de "
+"extensión que se restringen a una API limitada (al definir Py_LIMITED_API) "
+"no pueden usar muchas de las funciones internas, pero están restringidos a "
+"un conjunto de funciones API que se promete serán estables para varias "
+"versiones. Como consecuencia, los módulos de extensión creados para 3.2 en "
+"ese modo también funcionarán con 3.3, 3.4, etc. Los módulos de extensión que "
+"hacen uso de los detalles de las estructuras de memoria aún se pueden "
+"construir, pero deberán recompilarse para cada lanzamiento de funciones."
 
 #: ../Doc/whatsnew/3.2.rst:82
 msgid ":pep:`384` - Defining a Stable ABI"
-msgstr ""
+msgstr ":pep:`384` - Definición de un ABI estable"
 
 #: ../Doc/whatsnew/3.2.rst:83
 msgid "PEP written by Martin von Löwis."
-msgstr ""
+msgstr "PEP escrito por Martin von Löwis."
 
 #: ../Doc/whatsnew/3.2.rst:87
 msgid "PEP 389: Argparse Command Line Parsing Module"
 msgstr ""
+"PEP 389: Módulo de análisis sintáctico (*Parser*) de línea de comandos "
+"Argparse"
 
 #: ../Doc/whatsnew/3.2.rst:89
 msgid ""
@@ -88,6 +111,11 @@ msgid ""
 "for positional arguments (not just options), subcommands, required options "
 "and other common patterns of specifying and validating options."
 msgstr ""
+"Se introdujo un nuevo módulo para el análisis de la línea de comandos, :mod:"
+"`argparse`, para superar las limitaciones de :mod:`optparse` que no brindaba "
+"soporte para argumentos posicionales (no solo opciones), subcomandos, "
+"opciones requeridas y otros patrones comunes para especificar y validar "
+"opciones."
 
 #: ../Doc/whatsnew/3.2.rst:94
 msgid ""
