Otros cambios en el lenguaje y nuevos módulos

--- a/whatsnew/3.5.po
+++ b/whatsnew/3.5.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2020-12-28 00:25-0600\n"
+"PO-Revision-Date: 2021-01-10 00:43-0600\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1050,11 +1050,13 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.5.rst:701
 msgid "Other Language Changes"
-msgstr ""
+msgstr "Otros cambios en el lenguaje"
 
 #: ../Doc/whatsnew/3.5.rst:703
 msgid "Some smaller changes made to the core Python language are:"
 msgstr ""
+"Algunos cambios más pequeños que se hicieron en el lenguaje central de "
+"Python son:"
 
 #: ../Doc/whatsnew/3.5.rst:705
 msgid ""
@@ -1062,12 +1064,17 @@ msgid ""
 "error handlers now work with decoding and translating. (Contributed by "
 "Serhiy Storchaka in :issue:`19676` and :issue:`22286`.)"
 msgstr ""
+"Se agregaron los gestores de error ``\"namereplace\"``. Ahora los gestores "
+"de error ``\"backslashreplace\"`` funcionan con decodificación y traducción. "
+"(Contribución de Serhiy Storchaka en :issue:`19676` y :issue:`22286`.)"
 
 #: ../Doc/whatsnew/3.5.rst:709
 msgid ""
 "The :option:`-b` option now affects comparisons of :class:`bytes` with :"
 "class:`int`.  (Contributed by Serhiy Storchaka in :issue:`23681`.)"
 msgstr ""
+"Ahora la opción :option:`-b` afecta comparaciones de :class:`bytes` con :"
+"class:`int`. (Contribución de Serhiy Storchaka en :issue:`23681`.)"
 
 #: ../Doc/whatsnew/3.5.rst:712
 msgid ""
@@ -1075,6 +1082,9 @@ msgid ""
 "encodings>`. (Contributed by Serhiy Storchaka in :issue:`22682` and :issue:"
 "`22681`.)"
 msgstr ""
+"Nuevos :ref:`códecs <standard-encodings>` Kazakh ``kz1048`` y Tajik "
+"``koi8_t``. (Contribución de Serhiy Storchaka en :issue:`22682` y :issue:"
+"`22681`.)"
 
 #: ../Doc/whatsnew/3.5.rst:715
 msgid ""
@@ -1082,20 +1092,25 @@ msgid ""
 "`collections.namedtuple` docstrings. (Contributed by Berker Peksag in :issue:"
 "`24064`.)"
 msgstr ""
+"Ahora las docstrings de propiedad se pueden escribir. Esto es especialmente "
+"útil para las docstrings :func:`collections.namedtuple`. (Contribución de "
+"Berker Peksag en :issue:`24064`.)"
 
 #: ../Doc/whatsnew/3.5.rst:719
 msgid ""
 "Circular imports involving relative imports are now supported. (Contributed "
 "by Brett Cannon and Antoine Pitrou in :issue:`17636`.)"
 msgstr ""
+"Ahora se admiten las importaciones circulares que involucran importaciones "
+"relativas. (Contribución de Brett Cannon y Antoine Pitrou en :issue:`17636`.)"
 
 #: ../Doc/whatsnew/3.5.rst:724
 msgid "New Modules"
-msgstr ""
+msgstr "Nuevos módulos"
 
 #: ../Doc/whatsnew/3.5.rst:727
 msgid "typing"
-msgstr ""
+msgstr "typing"
 
 #: ../Doc/whatsnew/3.5.rst:729
 msgid ""
@@ -1103,10 +1118,14 @@ msgid ""
 "standard definitions and tools for function type annotations. See :ref:`Type "
 "Hints <whatsnew-pep-484>` for more information."
 msgstr ""
+"El módulo nuevo :term:`provisional <provisional api>` :mod:`typing` "
+"proporciona definiciones y herramientas estándar para anotaciones de tipos "
+"de funciones. Consultar :ref:`Indicador de tipos <whatsnew-pep-484>` para "
+"más información."
 
 #: ../Doc/whatsnew/3.5.rst:736
 msgid "zipapp"
-msgstr ""
+msgstr "zipapp"
 
 #: ../Doc/whatsnew/3.5.rst:738
 msgid ""
@@ -1115,6 +1134,11 @@ msgid ""
 "were introduced in Python 2.6 in :issue:`1739468`, but which were not well "
 "publicized, either at the time or since."
 msgstr ""
+"El módulo nuevo :mod:`zipapp` (especificado en :pep:`441`) proporciona una "
+"API y una herramienta de línea de comandos para crear aplicaciones Python "
+"Zip ejecutables, las cuales se introdujeron en la versión de Python 2.6 en :"
+"issue:`1739468`, pero no se publicitaron bien, ni en ese momento ni desde "
+"entonces."
 
 #: ../Doc/whatsnew/3.5.rst:743
 msgid ""
@@ -1122,16 +1146,21 @@ msgid ""
 "the files, including a ``__main__.py`` file, into a directory ``myapp`` and "
 "running:"
 msgstr ""
+"Con el módulo nuevo, empaquetar tu aplicación es tan simple como colocar "
+"todos los archivos, incluido un archivo ``__main__.py`` en un directorio "
+"``myapp`` y ejecutar:"
 
 #: ../Doc/whatsnew/3.5.rst:752
 msgid ""
 "The module implementation has been contributed by Paul Moore in :issue:"
 "`23491`."
 msgstr ""
+"La implementación del módulo ha sido contribución de Paul Moore en :issue:"
+"`23491`."
 
 #: ../Doc/whatsnew/3.5.rst:757
 msgid ":pep:`441` -- Improving Python ZIP Application Support"
-msgstr ""
+msgstr ":pep:`441` -- Mejora de soporte de la aplicación Python ZIP"
 
 #: ../Doc/whatsnew/3.5.rst:761
 msgid "Improved Modules"
