Traducido archivo whatsnew/3.3.po

--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-01-09 17:47-0400\n"
+"PO-Revision-Date: 2021-01-09 20:25-0400\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3255,7 +3255,7 @@ msgstr ""
 "Nuevas constantes :data:`~os.RTLD_LAZY`, :data:`~os.RTLD_NOW`, :data:`~os."
 "RTLD_GLOBAL`, :data:`~os.RTLD_LOCAL`, :data:`~os.RTLD_NODELETE`, :data:`~os."
 "RTLD_NOLOAD`, and :data:`~os.RTLD_DEEPBIND` están disponibles en plataformas "
-"que las soporten. Éstas son para uso con la función :func:`sys."
+"que las soporten. Estas son para uso con la función :func:`sys."
 "setdlopenflags`, y reemplazan las constantes similares definidas en :mod:"
 "`ctypes` and :mod:`DLFCN`.  (Contribución de Victor Stinner en :issue:"
 "`13226`.)"
@@ -4852,9 +4852,7 @@ msgstr ""
 "`find_loader()`, en el caso de trabajar con los buscadores de entradas :term:"
 "` <path entry finder>`."
 
-# me confunde lo de los ganchos de importacion...
 #: ../Doc/whatsnew/3.3.rst:2398
-#, fuzzy
 msgid ""
 ":mod:`pkgutil` has been converted to use :mod:`importlib` internally. This "
 "eliminates many edge cases where the old behaviour of the :pep:`302` import "
@@ -4865,7 +4863,7 @@ msgid ""
 "provide the non-standard ``iter_modules()`` method."
 msgstr ""
 ":mod:`pkgutil` ha sido convertido para usar :mod:`importlib` internamente. "
-"Ésto elimina muchos casos extremos en los que el antiguo comportamiento de la "
+"Esto elimina muchos casos extremos en los que el antiguo comportamiento de la "
 "emulación de importación :pep:`302` no coincidía con el comportamiento del "
 "sistema de importación real. La emulación de importación en sí aún sigue "
 "presente, pero ya está obsoleta. Las funciones :func:`pkgutil.iter_importers` "
@@ -4982,17 +4980,15 @@ msgstr ""
 "decisiones afectadas por la versión AST, use :attr:`sys.version_info` para "
 "tomar la decisión."
 
-# no sé como quedo esto
 #: ../Doc/whatsnew/3.3.rst:2450
-#, fuzzy
 msgid ""
 "Code that used to work around the fact that the :mod:`threading` module used "
 "factory functions by subclassing the private classes will need to change to "
 "subclass the now-public classes."
 msgstr ""
-"El código que solía funcionar basado en el hecho de que el módulo :mod:"
-"`threading` usaba funciones factory por subclasificar las clases privadas "
-"necesitará cambiar las subclases a clases públicas"
+"El código que solía evitar el hecho de que el módulo :mod:`threading` "
+"utilizaba funciones de fábrica mediante la subclase de las clases privadas "
+"tendrá que cambiar a la subclase de las clases ahora públicas."
 
 #: ../Doc/whatsnew/3.3.rst:2454
 msgid ""
@@ -5010,9 +5006,7 @@ msgstr ""
 msgid "Porting C code"
 msgstr "Transferencia a código C"
 
-# tirandola a pegar..
 #: ../Doc/whatsnew/3.3.rst:2463
-#, fuzzy
 msgid ""
 "In the course of changes to the buffer API the undocumented :c:member:"
 "`~Py_buffer.smalltable` member of the :c:type:`Py_buffer` structure has been "
@@ -5020,7 +5014,7 @@ msgid ""
 msgstr ""
 "En el curso de cambios a la API del buffer la estructura indocumentada :c:"
 "member:`~Py_buffer.smalltable` member of the :c:type:`Py_buffer` ha sido "
-"eliminada, y el .... del :c:type:`PyMemoryViewObject` se ha cambiado."
+"eliminada, y el diseño de :c:type:`PyMemoryViewObject` se ha cambiado."
 
 #: ../Doc/whatsnew/3.3.rst:2468
 msgid ""
