--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-01-09 20:25-0400\n"
+"PO-Revision-Date: 2021-01-10 14:33-0400\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -215,7 +215,7 @@ msgstr ":pep:`420`  - Paquetes de espacio de nombres implícitos"
 msgid ""
 "PEP written by Eric V. Smith; implementation by Eric V. Smith and Barry Warsaw"
 msgstr ""
-"PEP escrito por Eric V. Smith; implementación de Eric V. Smith y Barry Warsaw"
+"PEP escrito por Eric V. Smith; implementación por Eric V. Smith y Barry Warsaw"
 
 #: ../Doc/whatsnew/3.3.rst:140
 msgid ""
@@ -1308,7 +1308,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.3.rst:772
 msgid "(Implementation by Brett Cannon)"
-msgstr "(Implementación de Brett Cannon)"
+msgstr "(Implementación por Brett Cannon)"
 
 #: ../Doc/whatsnew/3.3.rst:776
 msgid "Other Language Changes"
