--- a/whatsnew/3.2.po
+++ b/whatsnew/3.2.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-01-03 18:40-0300\n"
+"PO-Revision-Date: 2021-01-11 18:58-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -125,6 +125,11 @@ msgid ""
 "The older module is still being kept available because of the substantial "
 "amount of legacy code that depends on it."
 msgstr ""
+"Este módulo ya ha tenido un éxito generalizado en la comunidad como módulo "
+"de terceros. Con más funciones que su predecesor, el módulo :mod:`argparse` "
+"es ahora el módulo preferido para el procesamiento de la línea de comandos. "
+"El módulo más antiguo todavía se mantiene disponible debido a la gran "
+"cantidad de código heredado que depende de él."
 
 #: ../Doc/whatsnew/3.2.rst:100
 msgid ""
@@ -132,38 +137,48 @@ msgid ""
 "a set of choices, specifying a *metavar* in the help screen, validating that "
 "one or more positional arguments is present, and making a required option::"
 msgstr ""
+"Aquí hay un analizador de ejemplo comentado que muestra características de "
+"cómo limitar los resultados a un conjunto de opciones, especificar un "
+"*metavar* en la pantalla de ayuda, validar que uno o más argumentos "
+"posicionales están presentes y hacer una opción requerida:­:"
 
 #: ../Doc/whatsnew/3.2.rst:119
 msgid "Example of calling the parser on a command string::"
 msgstr ""
+"Ejemplo de llamada al analizador en una cadena de caracteres de comandos::"
 
 #: ../Doc/whatsnew/3.2.rst:130
 msgid "Example of the parser's automatically generated help::"
-msgstr ""
+msgstr "Ejemplo de ayuda generada automáticamente por el analizador::"
 
 #: ../Doc/whatsnew/3.2.rst:149
 msgid ""
 "An especially nice :mod:`argparse` feature is the ability to define "
 "subparsers, each with their own argument patterns and help displays::"
 msgstr ""
+"Una característica especialmente agradable de :mod:`argparse` es la "
+"capacidad de definir sub-analizadores (*subparsers*), cada uno con sus "
+"propios patrones de argumentos y pantallas de ayuda::"
 
 #: ../Doc/whatsnew/3.2.rst:175
 msgid ":pep:`389` - New Command Line Parsing Module"
-msgstr ""
+msgstr ":pep:`389` - Nuevo módulo de análisis de línea de comandos"
 
 #: ../Doc/whatsnew/3.2.rst:175
 msgid "PEP written by Steven Bethard."
-msgstr ""
+msgstr "PEP escrito por Steven Bethard."
 
 #: ../Doc/whatsnew/3.2.rst:177
 msgid ""
 ":ref:`upgrading-optparse-code` for details on the differences from :mod:"
 "`optparse`."
 msgstr ""
+":ref:`upgrade-optparse-code` para obtener detalles sobre las diferencias "
+"con :mod:`optparse`."
 
 #: ../Doc/whatsnew/3.2.rst:181
 msgid "PEP 391:  Dictionary Based Configuration for Logging"
-msgstr ""
+msgstr "PEP 391: Configuración basada en diccionario para Logging"
 
 #: ../Doc/whatsnew/3.2.rst:183
 msgid ""
@@ -174,6 +189,13 @@ msgid ""
 "they support incremental configuration, which is needed for specifying "
 "logger options from a command line."
 msgstr ""
+"El módulo :mod:`logging` proporcionó dos tipos de configuración, un estilo "
+"con llamadas de función para cada opción y otro estilo guiado por un archivo "
+"externo guardado en formato :mod:`ConfigParser`. Esas opciones no "
+"proporcionaron la flexibilidad para crear configuraciones a partir de "
+"archivos JSON o YAML, ni admitieron la configuración incremental, que es "
+"necesaria para especificar las opciones del logger desde una línea de "
+"comandos."
 
 #: ../Doc/whatsnew/3.2.rst:190
 msgid ""
@@ -183,24 +205,31 @@ msgid ""
 "filters, and loggers.  Here's a working example of a configuration "
 "dictionary::"
 msgstr ""
+"Para permitir un estilo más flexible, el módulo ahora ofrece :func:`logging."
+"config.dictConfig` para especificar la configuración de logging con "
+"diccionarios simples de Python. Las opciones de configuración incluyen "
+"formateadores, gestores, filtros y loggers. Aquí hay un ejemplo funcional de "
+"un diccionario de configuración::"
 
 #: ../Doc/whatsnew/3.2.rst:214
 msgid ""
 "If that dictionary is stored in a file called :file:`conf.json`, it can be "
 "loaded and called with code like this::"
 msgstr ""
+"Si ese diccionario está almacenado en un archivo llamado :file:`conf.json`, "
+"se puede cargar y llamar con un código como este::"
 
 #: ../Doc/whatsnew/3.2.rst:229
 msgid ":pep:`391` - Dictionary Based Configuration for Logging"
-msgstr ""
+msgstr ":pep:`391` - Configuración basada en diccionario para Logging"
 
 #: ../Doc/whatsnew/3.2.rst:230
 msgid "PEP written by Vinay Sajip."
-msgstr ""
+msgstr "PEP escrito por Vinay Sajip."
 
 #: ../Doc/whatsnew/3.2.rst:234
 msgid "PEP 3148:  The ``concurrent.futures`` module"
-msgstr ""
+msgstr "PEP 3148: El módulo ``concurrent.futures``"
 
 #: ../Doc/whatsnew/3.2.rst:236
 msgid ""
@@ -209,6 +238,10 @@ msgid ""
 "which provides a uniform high-level interface for managing threads and "
 "processes."
 msgstr ""
+"El código para crear y administrar la concurrencia se está recopilando en un "
+"nuevo espacio de nombres de nivel superior, *concurrent*. Su primer miembro "
+"es un paquete *futures* que proporciona una interfaz uniforme de alto nivel "
+"para administrar hilos y procesos."
 
 #: ../Doc/whatsnew/3.2.rst:240
 msgid ""
@@ -219,6 +252,13 @@ msgid ""
 "object supports status checks (running or done), timeouts, cancellations, "
 "adding callbacks, and access to results or exceptions."
 msgstr ""
+"El diseño de: mod:`concurrent.futures` se inspiró en el paquete *java.util."
+"concurrent*. En ese modelo, una llamada en ejecución y su resultado están "
+"representados por un objeto :class:`~concurrent.futures.Future` que abstrae "
+"características comunes a hilos, procesos y llamadas a procedimientos "
+"remotos. Ese objeto admite verificaciones de estado (en ejecución o "
+"terminadas), tiempos de espera, cancelaciones, agregar devoluciones de "
+"llamada y acceso a resultados o excepciones."
 
 #: ../Doc/whatsnew/3.2.rst:247
 msgid ""
@@ -229,6 +269,13 @@ msgid ""
 "queue, add time-out handling, and limit the total number of threads, "
 "processes, or remote procedure calls."
 msgstr ""
+"El agregado principal del nuevo módulo es un par de clases ejecutoras para "
+"lanzar y administrar llamadas. El objetivo de los ejecutores es facilitar el "
+"uso de las herramientas existentes para realizar llamadas en paralelo. "
+"Ahorran el esfuerzo necesario para configurar un grupo de recursos, lanzar "
+"las llamadas, crear una cola de resultados, agregar gestión de tiempo de "
+"espera y limitar la cantidad total de hilos, procesos o llamadas a "
+"procedimientos remotos."
 
 #: ../Doc/whatsnew/3.2.rst:254
 msgid ""
@@ -237,6 +284,11 @@ msgid ""
 "solves the design challenge that arises when each component has its own "
 "competing strategy for resource management."
 msgstr ""
+"Idealmente, cada aplicación debería compartir un solo ejecutor en varios "
+"componentes para que los límites de procesos e hilos se puedan administrar "
+"de forma centralizada. Esto resuelve el desafío de diseño que surge cuando "
+"cada componente tiene su propia estrategia competitiva para la gestión de "
+"recursos."
 
 #: ../Doc/whatsnew/3.2.rst:259
 msgid ""
@@ -249,6 +301,14 @@ msgid ""
 "assure that resources are automatically released when currently pending "
 "futures are done executing."
 msgstr ""
+"Ambas clases comparten una interfaz común con tres métodos: :meth:"
+"`~concurrent.futures.Executor.submit` para programar un invocable y retornar "
+"un objeto :class:`~concurrent.futures.Future`; :meth:`~concurrent.futures."
+"Executor.map` para programar muchas llamadas asincrónicas a la vez, y :meth:"
+"`~concurrent.futures.Executor.shutdown` para liberar recursos. La clase es "
+"un :term:`context manager` y se puede usar en una declaración :keyword:"
+"`with` para asegurar que los recursos se liberen automáticamente cuando los "
+"futuros actualmente pendientes terminan de ejecutarse."
 
 #: ../Doc/whatsnew/3.2.rst:268
 msgid ""
